adding doc and images.

--- a/README.html
+++ b/README.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>vtkBrainExtractionFilter</title>
 </head>
 <body>
 <h1>vtkBrainExtractionFilter</h1>
-vtk Implementation of FSL Brain Extraction Tool 
+vtk Implementation of FSL Brain Extraction Tool <br>
+Samples: <br>
+<img src="mesh.png" alt="mesh" width="500">
+<img src="image.png" alt="image" width="500">
 </body>
 </html>
