--- a/README.html
+++ b/README.html
@@ -7,7 +7,7 @@
 <h1>vtkBrainExtractionFilter</h1>
 vtk Implementation of FSL Brain Extraction Tool <br>
 Samples: <br>
-<img src="mesh.png" alt="mesh" width="500">
-<img src="image.png" alt="image" width="500">
+<img src="README/mesh.png" alt="mesh" width="300">
+<img src="README/image.png" alt="image" width="300">
 </body>
 </html>
