--- a/README.html
+++ b/README.html
@@ -15,7 +15,7 @@
 </p>
  <br>
 Samples: <br>
-<a href=https://github.com/wuzhuobin/vtkBrainExtractionFilter/issues/3>Sample Download. Issue #3</a>
+<a href=https://github.com/wuzhuobin/vtkBrainExtractionFilter/issues/3>Sample Download. </a>Issue #3
 <img src="README/mesh.png" alt="mesh" width="300">
 <img src="README/image.png" alt="image" width="300">
 </body>
